--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsdom-global": "2.1.0",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.3.1",
+    "react-addons-update": "^15.3.1",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.0.1",
     "react-router": "^2.0.1",
